# ced-2017

./: .gitlab-ci.yml  README.md  demo_hdf5_correction.ipynb
DemoCode/: demo_hdf5.ipynb  demo_io.cxx
ci/: run_tests.sh
data_visu/DemoCode/: demo_io.py
solutions/: CMakeLists.txt
solutions/cmake/: FindPythonModule.cmake
solutions/doc/: CMakeLists.txt
solutions/doc/config/: doxy.config.in
solutions/doc/sphinx/: conf.py.in  doxygen_ref.rst  index.rst.in  manuel.rst  python_ref.rst
solutions/src/: main2.cpp
solutions/src/tests/: test_boost.cpp  test_fft.f90
solutions/src/tools/: linearAlgebraTools.hpp  tools.cpp  tools.f90  tools.hpp  tools_interface.hpp
solutions/src/tools/fft/: fftw.f90  fftw_tools.hpp
solutions/src/tools/mkl/: mkl_interface.cpp  mkl_interface.hpp
solutions/tools2py/: penalisation.py
tp-debug/: arrayIndex.c  dummyArg1.c  dummyArg1.f90  dynamicMemory.f90  foo.f90  ioBadCode.f90  miss.c  miss.f90  miss.h  pointerBugs.c  sampleFile.f90  sectionsCT.txt  trapezoid.f90  variablePrinting.c
tp-debug/src_solutions/: arrayIndex.c  foo.f  foo.f90  ioGoodCode.f90  miss.c  miss.f90  miss.h  variablePrinting.c
tp-profile/: oarscript.sh
tp-profile/multmat/: dgemm_with_timing.c  matmul.cxx  matmul.hpp  multmat.f  tp.cxx
tp-profile/valgrind/: mass.cpp  matmul.cxx  matmul.hpp  tp.cxx  valgrind-memcheck.c
